src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Waiver__c</fullName>
        <label>Alternate Waiver</label>
        <summaryFilterItems>
            <field>Waiver__c.Request_Type__c</field>
            <operation>equals</operation>
            <value>AmeriCorps Alternative Match Schedule</value>
        </summaryFilterItems>
        <summaryForeignKey>Waiver__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Awarded_Awards__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Awarded Awards #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Match_Required__c</fullName>
        <label>Budget Match Required</label>
        <summarizedField>Waiver__c.Minimum_Required_Match__c</summarizedField>
        <summaryFilterItems>
            <field>Waiver__c.Request_Type__c</field>
            <operation>notEqual</operation>
            <value>AmeriCorps Alternative Match Schedule, Sub-grants Waiver</value>
        </summaryFilterItems>
        <summaryForeignKey>Waiver__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CNCS_Corporate_Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Corporate Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuation_Awards__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Continuation Awards #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Continuation_and_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Continuation and Awarded #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CorporateProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <formula>Project_Director__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Project_Director__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Project_Director__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Project_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Project ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Match_Year__c</fullName>
        <formula>Awarded_Awards__c   +  Continuation_Awards__c -  Continuation_and_Awarded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <formula>Project_Director__r.Middle_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Waivers__c</fullName>
        <label>Number of Waivers</label>
        <summaryFilterItems>
            <field>Waiver__c.Request_Type__c</field>
            <operation>notEqual</operation>
            <value>Sub-grants Waiver</value>
        </summaryFilterItems>
        <summaryForeignKey>Waiver__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Project_Director__r.Primary_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Organization__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Site_URL__c</fullName>
        <label>Project Site URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <inlineHelpText>Please enter the state where the service will take place.</inlineHelpText>
        <label>Project State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Address_Doctor__c</fullName>
        <label>Response From Address Doctor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <formula>TEXT( Project_Director__r.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_CLR_Code__c</fullName>
        <label>State CLR Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field stores the status of the Project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Grants_Pass_Through_Match_Required__c</fullName>
        <label>Sub-Grants Pass-Through Match Required</label>
        <summarizedField>Waiver__c.Minimum_Required_Match__c</summarizedField>
        <summaryFilterItems>
            <field>Waiver__c.Request_Type__c</field>
            <operation>equals</operation>
            <value>Sub-grants Waiver</value>
        </summaryFilterItems>
        <summaryForeignKey>Waiver__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <formula>Project_Director__r.Suffix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Project_Director__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Approved__c</fullName>
        <label>Waiver Approved</label>
        <summarizedField>Waiver__c.CNCS_Approved_Date__c</summarizedField>
        <summaryForeignKey>Waiver__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projSequence__c</fullName>
        <label>projSequence</label>
        <type>AutoNumber</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>CorporateProgram__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Director__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>Sweet_Almond_Project</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Sweet Almond Project</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Project Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>Phone__c &lt;&gt; null &amp;&amp; NOT(REGEX( Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Please enter a 10 digit phone number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number1</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX( Phone_Number__c, &quot;(\\d){10}&quot;))</errorConditionFormula>
        <errorMessage>Please enter a 10 digit phone number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip</fullName>
        <active>false</active>
        <description>Zip code should be 5 digits only.</description>
        <errorConditionFormula>NOT(REGEX( Zip__c, &quot;(\\d){5}&quot;))</errorConditionFormula>
        <errorDisplayField>Zip__c</errorDisplayField>
        <errorMessage>Please enter 5 digit Zipcode.</errorMessage>
    </validationRules>
</CustomObject>